package(
    default_applicable_licenses = ["//:license"],
    default_visibility = ["//visibility:public"],  # TODO: Expose to public
)

java_library(
    name = "policy",
    exports = ["//policy/src/main/java/dev/cel/policy"],
)

java_library(
    name = "source",
    exports = ["//policy/src/main/java/dev/cel/policy:source"],
)

java_library(
    name = "validation_exception",
    exports = ["//policy/src/main/java/dev/cel/policy:validation_exception"],
)

java_library(
    name = "config",
    exports = ["//policy/src/main/java/dev/cel/policy:config"],
)

java_library(
    name = "config_parser",
    exports = ["//policy/src/main/java/dev/cel/policy:config_parser"],
)

java_library(
    name = "parser",
    exports = ["//policy/src/main/java/dev/cel/policy:parser"],
)

java_library(
    name = "compiler_impl",
    visibility = ["//visibility:public"],
    exports = ["//policy/src/main/java/dev/cel/policy:compiler_impl"],
)

java_library(
    name = "yaml_parser",
    visibility = ["//visibility:public"],
    exports = ["//policy/src/main/java/dev/cel/policy:yaml_parser"],
)

java_library(
    name = "yaml_config_parser",
    visibility = ["//visibility:public"],
    exports = ["//policy/src/main/java/dev/cel/policy:yaml_config_parser"],
)
