load("@rules_java//java:defs.bzl", "java_library")

package(
    default_applicable_licenses = ["//:license"],
    default_visibility = ["//visibility:public"],
)

java_library(
    name = "policy",
    exports = ["//policy/src/main/java/dev/cel/policy"],
)

java_library(
    name = "compiled_rule",
    exports = ["//policy/src/main/java/dev/cel/policy:compiled_rule"],
)

java_library(
    name = "source",
    exports = ["//policy/src/main/java/dev/cel/policy:source"],
)

java_library(
    name = "validation_exception",
    exports = ["//policy/src/main/java/dev/cel/policy:validation_exception"],
)

java_library(
    name = "parser",
    exports = ["//policy/src/main/java/dev/cel/policy:parser"],
)

java_library(
    name = "policy_parser_context",
    exports = ["//policy/src/main/java/dev/cel/policy:policy_parser_context"],
)

java_library(
    name = "parser_factory",
    exports = ["//policy/src/main/java/dev/cel/policy:parser_factory"],
)

java_library(
    name = "compiler_factory",
    exports = ["//policy/src/main/java/dev/cel/policy:compiler_factory"],
)

java_library(
    name = "parser_builder",
    exports = ["//policy/src/main/java/dev/cel/policy:parser_builder"],
)

java_library(
    name = "compiler",
    exports = ["//policy/src/main/java/dev/cel/policy:compiler"],
)

java_library(
    name = "compiler_builder",
    exports = ["//policy/src/main/java/dev/cel/policy:compiler_builder"],
)
