load("@rules_java//java:defs.bzl", "java_library")
load("//:cel_android_rules.bzl", "cel_android_library")

package(
    default_applicable_licenses = ["//:license"],
    default_visibility = ["//:internal"],  # TODO: Expose when ready
)

java_library(
    name = "cel_lite_descriptor",
    # used_by_android
    exports = ["//protobuf/src/main/java/dev/cel/protobuf:cel_lite_descriptor"],
)

java_library(
    name = "proto_descriptor_collector",
    testonly = 1,
    exports = ["//protobuf/src/main/java/dev/cel/protobuf:proto_descriptor_collector"],
)

alias(
    name = "cel_lite_descriptor_generator",
    actual = "//protobuf/src/main/java/dev/cel/protobuf:cel_lite_descriptor_generator",
    visibility = ["//:internal"],
)
