load("@rules_jvm_external//:defs.bzl", "java_export")
load("@bazel_common//tools/maven:pom_file.bzl", "pom_file")
load("//publish:cel_version.bzl", "CEL_VERSION")

RUNTIME_TARGETS = [
    "//runtime",
    "//runtime:base",
    "//runtime:interpreter",
    "//runtime:runtime_helper",
    "//runtime:unknown_attributes",
]

pom_file(
    name = "cel_runtime_pom",
    substitutions = {
        "CEL_VERSION": CEL_VERSION,
        "CEL_ARTIFACT_ID": "runtime",
        "PACKAGE_NAME": "CEL Java Runtime",
        "PACKAGE_DESC": "Common Expression Language Runtime for Java",
    },
    targets = RUNTIME_TARGETS,
    template_file = "pom_template.xml",
)

java_export(
    name = "cel_runtime",
    maven_coordinates = "dev.cel:runtime:%s" % CEL_VERSION,
    pom_template = ":cel_runtime_pom",
    runtime_deps = RUNTIME_TARGETS,
)

V1ALPHA1_UTILITY_TARGETS = [
    "//common:proto_v1alpha1_ast",
]

pom_file(
    name = "cel_v1alpha1_pom",
    substitutions = {
        "CEL_VERSION": CEL_VERSION,
        "CEL_ARTIFACT_ID": "v1alpha1",
        "PACKAGE_NAME": "CEL Java v1alpha1 Utility",
        "PACKAGE_DESC": "Common Expression Language Utility for supporting v1alpha1 protobuf definitions",
    },
    targets = V1ALPHA1_UTILITY_TARGETS,
    template_file = "pom_template.xml",
)

java_export(
    name = "cel_v1alpha1",
    maven_coordinates = "dev.cel:v1alpha1:%s" % CEL_VERSION,
    pom_template = ":cel_v1alpha1_pom",
    runtime_deps = V1ALPHA1_UTILITY_TARGETS,
)
