load("@rules_java//java:defs.bzl", "java_library")
load("//:java_lite_proto_cel_library.bzl", "java_lite_proto_cel_library")

package(
    default_applicable_licenses = ["//:license"],
    default_testonly = True,
    default_visibility = ["//:internal"],
)

java_library(
    name = "adorner",
    exports = ["//testing/src/main/java/dev/cel/testing:adorner"],
)

java_library(
    name = "line_differ",
    exports = ["//testing/src/main/java/dev/cel/testing:line_differ"],
)

java_library(
    name = "baseline_test_case",
    exports = ["//testing/src/main/java/dev/cel/testing:baseline_test_case"],
)

java_library(
    name = "test_decls",
    exports = ["//testing/src/main/java/dev/cel/testing:test_decls"],
)

java_library(
    name = "cel_baseline_test_case",
    exports = ["//testing/src/main/java/dev/cel/testing:cel_baseline_test_case"],
)

java_library(
    name = "base_interpreter_test",
    exports = ["//testing/src/main/java/dev/cel/testing:base_interpreter_test"],
)

alias(
    name = "policy_test_resources",
    actual = "//testing/src/test/resources/policy:policy_yaml_files",
)

java_library(
    name = "expr_value_utils",
    exports = ["//testing/src/main/java/dev/cel/testing/utils:expr_value_utils"],
)

java_lite_proto_cel_library(
    name = "test_all_types_cel_java_proto_lite",
    java_descriptor_class_prefix = "TestAllTypes",
    deps = ["@cel_spec//proto/cel/expr/conformance/proto3:test_all_types_proto"],
)
