load("@rules_java//java:defs.bzl", "java_library")
load("//:cel_android_library.bzl", "cel_android_library")

package(
    default_applicable_licenses = ["//:license"],
    default_visibility = ["//visibility:public"],
)

java_library(
    name = "ast",
    exports = ["//common/src/main/java/dev/cel/common/ast"],
)

cel_android_library(
    name = "ast_android",
    visibility = ["//:android_allow_list"],
    exports = ["//common/src/main/java/dev/cel/common/ast:ast_android"],
)

java_library(
    name = "expr_converter",
    exports = ["//common/src/main/java/dev/cel/common/ast:expr_converter"],
)

cel_android_library(
    name = "expr_converter_android",
    visibility = ["//:android_allow_list"],
    exports = ["//common/src/main/java/dev/cel/common/ast:expr_converter_android"],
)

java_library(
    name = "expr_v1alpha1_converter",
    exports = ["//common/src/main/java/dev/cel/common/ast:expr_v1alpha1_converter"],
)

java_library(
    name = "cel_expr_visitor",
    exports = ["//common/src/main/java/dev/cel/common/ast:cel_expr_visitor"],
)

java_library(
    name = "expr_factory",
    exports = ["//common/src/main/java/dev/cel/common/ast:expr_factory"],
)

java_library(
    name = "mutable_expr",
    exports = ["//common/src/main/java/dev/cel/common/ast:mutable_expr"],
)
